[gd_scene format=3 uid="uid://diyu4ckw7jjns"]

[ext_resource type="Script" uid="uid://dhf8bvmyxfdo0" path="res://Hud/Sell_interface/Item_box_buy/item_box_buy.gd" id="1_ds7p1"]
[ext_resource type="Texture2D" uid="uid://cjo8tlux8q3il" path="res://Assets/upgrade_base.png" id="2_ac3dx"]
[ext_resource type="Texture2D" uid="uid://b4e840s5hda1u" path="res://Assets/upgrade_sword.png" id="3_khnl4"]

[node name="ItemBox" type="Button" unique_id=2037923807]
custom_minimum_size = Vector2(32, 32)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 328.0
offset_top = 240.0
offset_right = -792.0
offset_bottom = -376.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ds7p1")

[node name="Control" type="Control" parent="." unique_id=110957605]
anchors_preset = 0
offset_right = 32.0
offset_bottom = 32.0
mouse_filter = 2

[node name="background" type="Sprite2D" parent="Control" unique_id=1218399184]
position = Vector2(16, 16)
texture = ExtResource("2_ac3dx")

[node name="icon_sprite2d" type="Sprite2D" parent="Control" unique_id=1539634978]
unique_name_in_owner = true
position = Vector2(16, 16)
texture = ExtResource("3_khnl4")

[node name="DescriptionLabel" type="Label" parent="Control" unique_id=1568070542]
unique_name_in_owner = true
layout_mode = 0
offset_left = -32.0
offset_top = -32.0
offset_right = 59.0
offset_bottom = -9.0
text = "ciaooooooo"
horizontal_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
